Fixed spelling mistake "milimeters" to "millimeters"

--- a/converters.html
+++ b/converters.html
@@ -168,7 +168,7 @@
                         <div class="input-group input-group-md">
                             
                           <select class="selectorsConverters bg-info text-white" id="selectLength" for="placeLength">
-                            <option value="mm">Milimeters</option>
+                            <option value="mm">Millimeters</option>
                             <option value="cm">Centimeters</option>
                             <option value="m">Meters</option>
                             <option value="km">Kilometers</option>
@@ -188,7 +188,7 @@
                             <input type="number" placeholder="Result" id="lengthResult" class="form-control text-white converterInputBoxes" readonly>
                            
                             <select class="selectorsConverters bg-info text-white" id="typeOfResult" for="placeLength">
-                             <option value="mm">Milimeters</option>
+                             <option value="mm">Millimeters</option>
                              <option value="cm">Centimeters</option>
                              <option value="m">Meters</option>
                              <option value="km">Kilometers</option>
@@ -205,7 +205,7 @@
             <div class="container mt-4">
                 <div class="row">
                     <div class="col-md-3">
-                        <h5 style="color:white">Milimeters</h5>
+                        <h5 style="color:white">Millimeters</h5>
                         <ul style="color: aliceblue;">
                             <li>1 mm = 0.1cm</li>
                             <li>1 mm = 0.001m</li>
