Update index.html name to Math Hacker Pro

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="./styles.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Math Solver Pro</title>
+    <title>Math Hacker Pro</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.5.0/math.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
   <nav id="navbar" class="navbar navbar-dark bg-dark sticky-top">
-    <a href="index.html" target="_self" id="navbarTitle" class="navbar-brand">Math Solver PRO</a>
+    <a href="index.html" target="_self" id="navbarTitle" class="navbar-brand">Math Hacker PRO</a>
     <button type="button" class="navbar-toggler" id="navbarButton" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-label="Expand Navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -157,9 +157,9 @@
 
               <div class="d-flex justify-content-center">
                 <p p class="introParagraph">
-                  Welcome to Math Solver Pro, your one-stop destination for all your mathematical needs! Our website offers a wide range of calculators and educational resources designed to help you tackle any math problem with ease. Whether you're looking for a scientific calculator, various unit converters, or geometric calculators, we have the tools you need to make your calculations simple and accurate.
+                  Welcome to Math Hacker Pro, your one-stop destination for all your mathematical needs! Our website offers a wide range of calculators and educational resources designed to help you tackle any math problem with ease. Whether you're looking for a scientific calculator, various unit converters, or geometric calculators, we have the tools you need to make your calculations simple and accurate.
                   In addition to our comprehensive calculator collection, we provide detailed documentation on key mathematical subjects. Dive into our extensive documentation on calculus, trigonometry, algebra, geometry, and statistics. Each section is crafted to enhance your understanding and support your learning journey, whether you are a student, teacher, or math enthusiast.
-                  Explore Math Solver Pro and discover how we can assist you in mastering mathematics. With our user-friendly tools and informative resources, solving math problems has never been easier. Start exploring now and make the most of our reliable and accessible mathematical solutions. Good Luck !!!
+                  Explore Math Hacker Pro and discover how we can assist you in mastering mathematics. With our user-friendly tools and informative resources, solving math problems has never been easier. Start exploring now and make the most of our reliable and accessible mathematical solutions. Good Luck !!!
                 </p>
               </div>
 
@@ -425,7 +425,7 @@
               <h5 class="mt-2">Juan Matias Leon Lau</h5>
           </div>
           <div class="col-12 col-md-4 text-center mb-3 mb-md-0">
-              <p class="m-0">&copy; 2024 Math Solver PRO. All rights reserved.</p>
+              <p class="m-0">&copy; 2024 Math Hacker PRO. All rights reserved.</p>
           </div>
           <div class="col-12 col-md-4 text-center text-md-end">
             <a title="Github.com" href="https://github.com/mleon0526" target="_blank" class="text-white me-3"><i class="fa-brands fa-github fa-2x"></i></a>
