Update documentation.html title to Math Hacker Pro

--- a/documentation.html
+++ b/documentation.html
@@ -11,7 +11,7 @@
 <body>
 
   <nav id="navbar" class="navbar navbar-dark bg-dark sticky-top">
-    <a href="index.html" target="_self" id="navbarTitle" class="navbar-brand">Math Solver PRO</a>
+    <a href="index.html" target="_self" id="navbarTitle" class="navbar-brand">Math Hacker PRO</a>
     <button type="button" class="navbar-toggler" id="navbarButton" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-label="Expand Navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -695,7 +695,7 @@
               <h5 class="mt-2">Juan Matias Leon Lau</h5>
           </div>
           <div class="col-12 col-md-4 text-center mb-3 mb-md-0">
-              <p class="m-0">&copy; 2024 Math Solver PRO. All rights reserved.</p>
+              <p class="m-0">&copy; 2024 Math Hacker PRO. All rights reserved.</p>
           </div>
           <div class="col-12 col-md-4 text-center text-md-end">
             <a title="Github.com" href="https://github.com/mleon0526" target="_blank" class="text-white me-3"><i class="fa-brands fa-github fa-2x"></i></a>
